--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Sketch</title>
-
-    <link rel="stylesheet" type="text/css" href="style.css">
-
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
+    <title>index</title>
   </head>
 
   <body>
-    <script src="sketch1.js"></script>
+    <a href="./views/sketch1.html"><button>S1</button></a>
   </body>
 </html>
