Personalización de la página principal

--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <a href="./views/sketch1.html"><button>S1</button></a>
+    <h1>Welcome!</h1>
+    <div class="container">
+      <div class="column">
+        <div class="little-margin">
+          <h4>Primer acercamiento a p5</h4>
+          <p>
+            Líneas móviles, objetos que siguen el cursor, fondo personalizado y
+            acciones al hacer click
+          </p>
+          <a href="./views/sketch1.html"><button>Sketch 1</button></a>
+        </div>
+      </div>
+      <div class="column"></div>
+      <div class="column"></div>
+    </div>
   </body>
 </html>
