Preparado para el sketch 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
           <a href="./views/sketch1.html"><button>Sketch 1</button></a>
         </div>
       </div>
-      <div class="column"></div>
+      <div class="column">
+        <div class="little-margin">
+          <h4>En construcción</h4>
+          <p>
+            En construcción
+          </p>
+          <a href="./views/sketch2.html"><button>Sketch 2</button></a>
+        </div>
+      </div>
       <div class="column"></div>
     </div>
   </body>
