Sketch 2 terminado: 50 corazones móviles

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
       </div>
       <div class="column">
         <div class="little-margin">
-          <h4>En construcción</h4>
+          <h4>Corazones móviles</h4>
           <p>
-            En construcción
+            Generación de corazones en posiciones aleatorias del canvas, luego
+            se induce su movimiento con velocidad aleatoria.
           </p>
           <a href="./views/sketch2.html"><button>Sketch 2</button></a>
         </div>
