--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
           <a href="./views/sketch2.html"><button>Sketch 2</button></a>
         </div>
       </div>
-      <div class="column"></div>
+      <div class="column">
+        <div class="little-margin">
+          <h4>En construcción</h4>
+          <p>
+            En construcción.
+          </p>
+          <a href="./views/sketch3.html"><button>Sketch 3</button></a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
