Sketch 4 iniciado: Ejercicio 2 de la materia

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
           </p>
           <a href="./views/sketch1.html"><button>Sketch 1</button></a>
         </div>
+        <div class="little-margin">
+          <h4>Ejercicio 2 del curso: Color blindness</h4>
+          <p>
+            En construcción.
+          </p>
+          <a href="./views/sketch4.html"><button>Sketch 4</button></a>
+        </div>
       </div>
       <div class="column">
         <div class="little-margin">
