Sketch 5: Interpolación de Lagrange

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
           </p>
           <a href="./views/sketch2.html"><button>Sketch 2</button></a>
         </div>
+        <div class="little-margin">
+          <h4>Interpolación de Lagrange</h4>
+          <p>
+            En construcción.
+          </p>
+          <a href="./views/sketch5.html"><button>Sketch 5</button></a>
+        </div>
       </div>
       <div class="column">
         <div class="little-margin">
