Inicio de nuevo ejercicio: 6

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="little-margin">
           <h4>Ejercicio 2 del curso: Color blindness</h4>
           <p>
-            En construcción.
+            Simulación y corrección de 3 tipos de daltonismo.
           </p>
           <a href="./views/sketch4.html"><button>Sketch 4</button></a>
         </div>
@@ -51,6 +51,13 @@
             En construcción.
           </p>
           <a href="./views/sketch3.html"><button>Sketch 3</button></a>
+        </div>
+        <div class="little-margin">
+          <h4>Ejercicio de fotomosaico</h4>
+          <p>
+            En construcción.
+          </p>
+          <a href="./views/sketch6.html"><button>Sketch 6</button></a>
         </div>
       </div>
     </div>
