Comencé con la recopilación de los ejercicios del tema de Shaders

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         </div>
         <div class="little-margin">
           <h4>Ejercicio 2 del curso: Color blindness</h4>
-          <p>
-            Simulación y corrección de 3 tipos de daltonismo.
-          </p>
+          <p>Simulación y corrección de 3 tipos de daltonismo.</p>
           <a href="./views/sketch4.html"><button>Sketch 4</button></a>
+        </div>
+        <div class="little-margin">
+          <h4>Ejemplos del profesor</h4>
+          <p>Compilación de los ejemplos del profesor.</p>
+          <a href="./pages/index_prof.html"><button>Vamos</button></a>
         </div>
       </div>
       <div class="column">
@@ -38,25 +41,19 @@
         </div>
         <div class="little-margin">
           <h4>Interpolación de Lagrange</h4>
-          <p>
-            En construcción.
-          </p>
+          <p>En construcción.</p>
           <a href="./views/sketch5.html"><button>Sketch 5</button></a>
         </div>
       </div>
       <div class="column">
         <div class="little-margin">
           <h4>En construcción</h4>
-          <p>
-            En construcción.
-          </p>
+          <p>En construcción.</p>
           <a href="./views/sketch3.html"><button>Sketch 3</button></a>
         </div>
         <div class="little-margin">
           <h4>Ejercicio de fotomosaico</h4>
-          <p>
-            En construcción.
-          </p>
+          <p>En construcción.</p>
           <a href="./views/sketch6.html"><button>Sketch 6</button></a>
         </div>
       </div>
